Experiments 3 and 4